--- a/client/src/components/canvas/canvas.css
+++ b/client/src/components/canvas/canvas.css
@@ -1,14 +1,14 @@
 .canvasWrapper {
-  width: calc(2048px + 0.5rem);
-  height: calc(2048px + 0.5rem);
+  width: 100vw;
+  height: 100vh;
 
   display: flex;
   justify-content: center;
   align-content: center;
   align-items: center;
 
-  overflow-x: hidden;
-  overflow-y: hidden;
+  overflow-x: scroll;
+  overflow-y: scroll;
 }
 
 .canvas {
